added system notifications

--- a/website/ccp/css/display.css
+++ b/website/ccp/css/display.css
@@ -118,9 +118,14 @@ div#leftContent {
 div#seasonInfo {
   text-align: center;
 }
-div#content {
+div#contentTop, div#content {
   float: left;
   width: 93.5%;
+}
+div#contentTop {
+  font-size: 1.5em;
+  font-weight: bold;
+  text-align: center;
 }
 .footer {
   /*flex-shrink: 0;
