Fixes for mobile testing on test site

--- a/website/ccp/css/datatables.css
+++ b/website/ccp/css/datatables.css
@@ -1270,3 +1270,24 @@ div.dataTables_wrapper span.select-item {
 .dataTables_scrollFoot {
   display: none;
 }
+/*table.dataTable thead th .sortPriority:empty {
+  display: none;
+}
+table.dataTable thead th .sortPriority {
+  position: absolute;
+  top: -1em;
+  /*left: 1em;
+  color: #fff;
+  background: #333;
+  font-size: 50%;
+  width: 1em;
+  height: 1em;
+  padding: .3em;
+  line-height: 1;
+  display: block;
+  text-align: center;
+  border-radius: 50%;
+  border: .05em solid transparent;
+}
+.dataTables_scrollHead { overflow: visible !important; }
+.dataTables_scrollBody table.dataTable thead th span { height: 0;}*/
