--- a/website/ccp/css/manageTournament.css
+++ b/website/ccp/css/manageTournament.css
@@ -67,7 +67,7 @@ body {
   border-top: none;
   box-sizing: border-box;
   font-family: 'Josefin Sans', sans-serif;
-  font-size: 1.2em;
+  /*font-size: 1.2em;*/
   margin: 0 auto;
   /*max-width: 1500px;*/
   /*min-height: 100%;*/
