--- a/website/ccp/css/resetPassword.css
+++ b/website/ccp/css/resetPassword.css
@@ -28,8 +28,11 @@
 }
 /* Table column sizing
 ================================== */
-.responsive--2cols > .responsive-cell {
-  width: 50%;
+.responsive--2cols > .responsive-cell--head {
+  width: 40%;
+}
+.responsive--2cols > .responsive-cell--value {
+  width: 60%;
 }
 .responsive--3cols > .responsive-cell {
   width: 33.33%;
@@ -54,7 +57,7 @@ body {
   border-top: none;
   box-sizing: border-box;
   font-family: 'Josefin Sans', sans-serif;
-  font-size: 1.2em;
+  /*font-size: 1.2em;*/
   margin: 0 auto;
   max-width: 500px;
   min-height: 100%;
@@ -91,6 +94,11 @@ h6 {
 .responsive-cell--head > h6 {
   color: white;
 }
+@media all and (max-width: 1100px) {
+  h1 {
+    font-size: 1.4em;
+  }
+}
 @media all and (max-width: 600px) {
   body {
     max-width: unset;
@@ -122,8 +130,8 @@ button {
   border: none;
   color: white;
   cursor: pointer;
-  font-size: 24px;
-  padding: 5px 10px 10px 10px;
+  /*font-size: 1.2rem;*/
+  padding: 2.5px 5px 5px 5px;
 }
 /* Darker background on mouse-over */
 button:hover {
