--- a/website/ccp/css/championship.css
+++ b/website/ccp/css/championship.css
@@ -99,30 +99,6 @@ h6 {
   float: left;
   width: 10%;
 }
-@media all and (max-width: 600px) {
-  body {
-    max-width: unset;
-  }
-  .responsive-cell-empty {
-    display: none;
-  }
-  .responsive--collapse {
-    display: block;
-  }
-  /*.responsive--collapse > .responsive-cell {
-    width: 100% !important;
-  }*/
-  .responsive--collapse > .responsive-cell--foot {
-    margin-bottom: 1em;
-  }
-  #leftContent {
-    float: left;
-    width: 20%;
-  }
-  .responsive--3cols > .responsive-cell {
-    width: unset;
-  }
-}
 .no-flexbox .responsive {
   display: block;
 }
@@ -146,7 +122,10 @@ button:hover {
 }
 .column {
   float: left;
-  width: 175px;
+  width: 10vw;
+}
+.column2 {
+  width: 30vw;
 }
 .clear {
   clear: both;
@@ -158,4 +137,43 @@ button:hover {
 }
 h3, h4 {
   margin: 0;
+}
+@media all and (max-width: 600px) {
+  body {
+    font-size: .6rem;
+    max-width: unset;
+  }
+  .responsive-cell-empty {
+    display: none;
+  }
+  .responsive--collapse {
+    display: block;
+  }
+  /*.responsive--collapse > .responsive-cell {
+    width: 100% !important;
+  }*/
+  .responsive--collapse > .responsive-cell--foot {
+    margin-bottom: 1em;
+  }
+  #leftContent {
+    float: left;
+    width: 20%;
+  }
+  .responsive--3cols > .responsive-cell {
+    width: unset;
+  }
+  .column {
+    width: 20vw;
+  }
+  .column2 {
+    width: 60vw;
+  }
+}
+@media all and (max-width: 1100px) {
+  .column {
+    width: 20vw;
+  }
+  .column2 {
+    width: 70vw;
+  }
 }
