--- a/website/ccp/css/display.css
+++ b/website/ccp/css/display.css
@@ -1,29 +1,9 @@
-@import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 body {
   font-size: .9rem;
 }
 nav {
  font-size: .8em;
 }
-#main-menu {
- float: left;
-}
-#modeDisplay {
-  color: green;
-  text-align: center;
-}
-/*#messages {*/
-#messages, .messages {
-  color: blue;
-}
-#errors, .errors {
-  color: red;
-}
-.number {text-align: right;}
-.positive {color:#009900; font-weight:bold;}
-.negative {color:#FF0000; font-weight:bold;}
-/*.errors {border-color: red;}*/
-.errors {border: 1px solid red !important;}
 p {
   margin: 0;
 }
@@ -31,60 +11,51 @@ h1 {
   margin: 1px;
   text-align: center;
 }
-.center {
+caption {
+  text-align: left;
+}
+td {
   text-align: center;
 }
-.hide {
- display: none;
+button, input[type="submit"], input[type="reset"] {
+  background-color: #5e68df;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
+  margin: 1px;
+  padding: 5px;
+  text-align: center;
+  text-decoration: none;
 }
-.hidden {
- visibility: hidden;
+/* Darker background on mouse-over */
+button:hover:enabled, input[type="submit"]:hover:enabled, input[type="reset"]:hover:enabled {
+  background-color: #274CE0;
+  font-weight: bold;
 }
-fieldset {border:0;}
-/*.ui-dialog .ui-dialog-titlebar {
-  font-size: .7em;
-  padding: .4em 0;
-}*/
-table.override30 {
-  margin: 0;
-  width: 30%;
+button:disabled, input[type="submit"]:disabled, input[type="reset"]:disabled {
+  cursor: not-allowed;
+  opacity: 0.6;
 }
-table.override40 {
-  margin: 0;
-  width: 40%;
+div.center {
+  margin: 0 auto;
 }
-table.override50 {
-  margin: 0;
-  width: 50%;
+a:focus {
+  outline: .1rem solid black;
 }
-table.override60 {
-  margin: 0;
-  width: 60%;
+/* Darker background on mouse-over */
+button:hover {
+  background-color: #274CE0;
 }
-table.override70 {
-  margin: 0;
-  width: 70%;
+#modeDisplay {
+  color: green;
+  text-align: center;
 }
-table.override90 {
-  margin: 0;
-  width: 90%;
+#messages {
+  color: blue;
 }
-/*table.dataTable.display tbody tr.inactive,
-table.dataTable.display tbody tr.inactive > .sorting_1,
-table.dataTable.display tbody tr.inactive > .sorting_2 {
- background-color: #ffe6e6;
-}*/
-.highlight {
-  background-color: yellow !important;
-}
-.form_content {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  row-gap: 5px;
-}
-caption {
- text-align: left;
+#errors {
+  color: red;
 }
 #seasonInfo {
   text-align: center;
@@ -94,19 +65,44 @@ caption {
   font-weight: bold;
   text-align: center;
 }
-.footer, .footerMini, .footerSmall, .footerMedium, .footerLarge {
-  /*flex-shrink: 0;
-  padding: 10px;*/
-  /*position: fixed;
-  left: 0;
-  bottom: 0;*/
+#selectedTournamentText {
+  font-size: .85rem;
+}
+.errors {
+  border: 1px solid red !important;
+  color: red;
+}
+.messages {
+  color: blue;
+}
+.number {
+  text-align: right;
+}
+.positive {
+   color: #009900;
+   font-weight: bold;
+ }
+.negative {
+  color: #FF0000;
+  font-weight:bold;
+}
+.center {
+  text-align: center;
+}
+.hide {
+  display: none;
+}
+.hidden {
+  visibility: hidden;
+}
+.highlight {
+  background-color: yellow !important;
+}
+.footer {
   clear: both;
   padding-top: 5px;
   text-align: center;
   width: 100%;
-}
-td {
-  text-align: center;
 }
 .textAlignUnset {
  text-align: unset;
@@ -127,40 +123,80 @@ td {
  font-size: 1.1em;
  font-weight: bold;
 }
-div.center {
- margin: 0 auto;
-}
-a:focus {
-  outline: .1rem solid black;
-}
 .title {
   font-weight: bold;
 }
-button, input[type="submit"], input[type="reset"] {
-  background-color: #5e68df;
+.fixedWidth {
+  font-family: monospace;
+}
+.button-icon {
+  background: none;
   border: none;
-  border-radius: 4px;
-  color: white;
+  color: inherit;
   cursor: pointer;
-  /*font-size: 1.2rem;
-  margin: 4px 2px;*/
-  margin: 1px;
-  padding: 5px;
-  text-align: center;
-  text-decoration: none;
+  display: inline-block;
+  font-size: inherit;
+  font-weight: 700;
+  outline: none;
+  padding: 0px 8px 0px 35px;
+  position: relative;
+  transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  /*display: flex;
+   justify-content: space-around;
+   align-items: center;*/
 }
-/* Darker background on mouse-over */
-button:hover:enabled, input[type="submit"]:hover:enabled, input[type="reset"]:hover:enabled {
-  background-color: #274CE0;
-  font-weight: bold;
+.button-icon:after {
+  content: '';
+  position: absolute;
+  transition: all 0.3s;
+  z-index: -1;
+  -moz-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
 }
-button:disabled, input[type="submit"]:disabled, input[type="reset"]:disabled {
-  cursor: not-allowed;
-  opacity: 0.6;
+.button-icon:before {
+  font-family: 'FontAwesome';
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  line-height: 1;
+  position: relative;
+  text-transform: none;
+  -webkit-font-smoothing: antialiased;
 }
-#selectedTournamentText {
-  font-size: .85rem;
+.button-icon-separator:before {
+  background: rgba(0,0,0,0.15);
 }
-/*#info {
-  text-align: center;
+.button-icon {
+  background: #3498db;
+  color: #fff;
+}
+/*.button-icon:hover {
+  background: #274CE0;
 }*/
+.button-icon:active {
+  background: #2980b9;
+  top: 2px;
+}
+.button-icon:before {
+  /*height: 100%;*/
+  left: 0;
+  line-height: 1.1;
+  position: absolute;
+  top: 0;
+  width: 30px;
+}
+.icon-border-caret-right:before {
+  content: "\f152";
+}
+.fa-caret-left, .fa-caret-right {
+  padding-left: 2px;
+  padding-right: 2px;
+  vertical-align: super;
+}
+@media all and (max-width: 600px) {
+  .button-icon:before {
+    line-height: 1.3;
+  }
+}
