--- a/website/ccp/css/manageNotification.css
+++ b/website/ccp/css/manageNotification.css
@@ -68,7 +68,7 @@ body {
   border-top: none;
   box-sizing: border-box;
   font-family: 'Josefin Sans', sans-serif;
-  font-size: 1.2em;
+  /*font-size: 1.2em;*/
   margin: 0 auto;
   max-width: 900px;
   min-height: 100%;
