--- a/website/ccp/css/registration.css
+++ b/website/ccp/css/registration.css
@@ -1,7 +1,12 @@
-.title {
- font-size: 1.1rem;
- font-weight: bold;
- text-align: center;
+table {
+  margin: auto;
+}
+.dataTables_filter {
+  float: unset !important;
+}
+.dataTables_info {
+  float: unset !important;
+  margin: 0 auto;
 }
 /* Variables
 ================================== */
@@ -10,17 +15,18 @@
 .responsive {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 0 3em 0;
+  /*margin: 0 0 3em 0;*/
+  margin: 0;
   padding: 0;
 }
 .responsive-cell {
-  background: rgba(112, 128, 144, 0.2);
+  /*background: rgba(112, 128, 144, 0.2);*/
   /*border: solid 3px white;*/
   box-sizing: border-box;
   flex-grow: 1;
   list-style: none;
   overflow: hidden;
-  padding: 0.4em 0.6em;
+  padding: 0.2em 0.2em;
   width: 100%;
 }
 .responsive-cell > h1,
@@ -33,11 +39,20 @@
 }
 /* Table column sizing
 ================================== */
-.responsive--2cols > .responsive-cell {
+.responsive--2cols > .responsive-cell-label {
   width: 50%;
 }
-.responsive--3cols > .responsive-cell {
-  width: 33.33%;
+.responsive--2cols > .responsive-cell-value {
+  width: 50%;
+}
+.responsive--3cols > .responsive-cell-label {
+  width: 10%;
+}
+.responsive--3cols > .responsive-cell-value {
+  width: 83%;
+}
+.responsive--3cols > .responsive-cell-button {
+  width: 7%;
 }
 .responsive--4cols > .responsive-cell {
   width: 25%;
@@ -61,8 +76,9 @@ body {
   font-family: 'Josefin Sans', sans-serif;
   /*font-size: 1.2em;*/
   margin: 0 auto;
+  max-width: 800px;
   min-height: 100%;
-  padding: .4em;
+  padding: 1em;
 }
 h1,
 h2,
@@ -95,10 +111,6 @@ h6 {
 .responsive-cell--head > h6 {
   color: white;
 }
-#leftContent {
-  float: left;
-  width: 10%;
-}
 @media all and (max-width: 600px) {
   body {
     max-width: unset;
@@ -106,21 +118,14 @@ h6 {
   .responsive-cell-empty {
     display: none;
   }
-  .responsive--collapse {
+  /*.responsive--collapse {
     display: block;
-  }
+  }*/
   /*.responsive--collapse > .responsive-cell {
     width: 100% !important;
   }*/
   .responsive--collapse > .responsive-cell--foot {
     margin-bottom: 1em;
-  }
-  #leftContent {
-    float: left;
-    width: 20%;
-  }
-  .responsive--3cols > .responsive-cell {
-    width: unset;
   }
 }
 .no-flexbox .responsive {
@@ -131,16 +136,4 @@ h6 {
 }
 .no-flexbox .responsive > .responsive-cell--foot {
   margin-bottom: 1em;
-}
-button {
-  background-color: #96C0CE;
-  border: none;
-  color: white;
-  cursor: pointer;
-  font-size: 24px;
-  padding: 6px 8px;
-}
-/* Darker background on mouse-over */
-button:hover {
-  background-color: #274CE0;
 }
