--- a/website/ccp/css/reports.css
+++ b/website/ccp/css/reports.css
@@ -1,29 +1,32 @@
-.contentReportMini, .footerMini {
-  width: 10%;
-}
-.contentReportSmall, .footerSmall {
-  width: 20%;
-}
-.contentReportMedium, .footerMedium {
-  width: 35%;
-}
-.contentReportLarge, .footerLarge {
-  width: 50%;
+body {
+  background-color: white;
+  border: double 3px #DDD;
+  border-bottom: none;
+  border-top: none;
+  box-sizing: border-box;
+  font-family: 'Josefin Sans', sans-serif;
+  /*font-size: 1.2em;*/
+  margin: 0 auto;
+  max-width: 550px;
+  min-height: 100%;
+  padding: 1em;
 }
 .link {
+  font-size: .9em;
   text-decoration: none;
 }
 .linkText {
   vertical-align: super;
 }
-.footerMini, .footerSmall, .footerMedium, .footerLarge {
-  text-align: center;
-}
-@media all and (max-width: 600px) {
-  .contentReportMini, .contentReportSmall, .contentReportMedium, .contentReportLarge, .footerMini, .footerSmall, .footerMedium, .footerLarge {
-    width: 100%;
+@media all and (max-width: 1100px) {
+  body {
+    max-width: unset;
+  }
+}@media all and (max-width: 600px) {
+  body {
+    max-width: unset;
   }
   .dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter {
-   text-align: right !important;
+    text-align: right !important;
   }
 }
