--- a/website/ccp/css/top5.css
+++ b/website/ccp/css/top5.css
@@ -1,23 +1,21 @@
-.contentTop5Mini, .footerMini {
-  width: 10%;
-}
-.contentTop5Small, .footerSmall {
-  width: 20%;
-}
-.contentTop5Medium, .footerMedium {
-  width: 35%;
-}
-.contentTop5Large, .footerLarge {
-  width: 50%;
+body {
+  background-color: white;
+  border: double 3px #DDD;
+  border-bottom: none;
+  border-top: none;
+  box-sizing: border-box;
+  font-family: 'Josefin Sans', sans-serif;
+  /*font-size: 1.2em;*/
+  margin: 0 auto;
+  max-width: 450px;
+  min-height: 100%;
+  padding: 1em;
 }
 .link {
   text-decoration: none;
 }
 .linkText {
   vertical-align: super;
-}
-.footerMini, .footerSmall, .footerMedium, .footerLarge {
-  text-align: center;
 }
 #live-dialog::backdrop, .dialog::backdrop {
   background-color: #5e68df;
@@ -27,7 +25,7 @@
   border: none;
   border-radius: 8px;
   box-shadow: 0 4px 5px rgb(0 0 0 / 30%);
-  margin: 100px;
+  /*margin: 100px;*/
   width: 500px;
 }
 #live-dialog header, .dialog header {
@@ -58,7 +56,7 @@
   padding: 5px;
 }
 @media all and (max-width: 600px) {
-  .contentTop5Mini, .contentTop5Small, .contentTop5Medium, .contentTop5Large, .footerMini, .footerSmall, .footerMedium, .footerLarge {
+  .contentTop5Mini, .contentTop5Small {
     width: 100%;
   }
   .dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter {
