--- a/website/ccp/css/manageEmail.css
+++ b/website/ccp/css/manageEmail.css
@@ -122,6 +122,11 @@ h6 {
     margin-bottom: 1em;
   }
 }
+@media all and (max-width: 1100px) {
+  #subject, #body {
+    width: 29ch;
+  }
+}
 .no-flexbox .responsive {
   display: block;
 }
