--- a/website/ccp/css/managePayout.css
+++ b/website/ccp/css/managePayout.css
@@ -1,3 +1,9 @@
 body {
-  max-width: 550px;
+  max-width: 400px;
+}
+.responsive--2cols > .responsive-cell-label {
+  width: 30%;
+}
+.responsive--2cols > .responsive-cell-value {
+  width: 70%;
 }
