Fix summary report to display earnings and add borders for clarity

--- a/website/ccp/css/datatablesLocal.css
+++ b/website/ccp/css/datatablesLocal.css
@@ -2,6 +2,8 @@
   font-size: .8rem;
 }
 table.dataTable thead th {
+  border-bottom: unset;
+  border: 1px solid rgba(0, 0, 0, 0.3);
   text-align: center !important;
 }
 table.dataTable tbody th,
