Rename database tables (use plural), columns (use lowercase and underscores) and add check constraints

--- a/website/ccp/css/reports.css
+++ b/website/ccp/css/reports.css
@@ -22,7 +22,8 @@ body {
   body {
     max-width: unset;
   }
-}@media all and (max-width: 600px) {
+}
+@media all and (max-width: 600px) {
   body {
     max-width: unset;
   }
